--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+       "Default": "Host=db.fmcdxtktgrifpzixuqbt.supabase.co;Port=5432;Database=postgres;Username=postgres;Password=7qnjgaKo6aMDgHfv;Ssl Mode=Require;Trust Server Certificate=true"
+  },
   "AllowedHosts": "*"
 }
