--- a/Saas-Auth-Service.csproj
+++ b/Saas-Auth-Service.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Saas_Auth_Service</RootNamespace>
   </PropertyGroup>
@@ -19,7 +19,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
-    <PackageReference Include="Saas.Shared.Lib" Version="1.0.5" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <!-- <PackageReference Include="Saas.Shared.Lib" Version="1.0.5" /> -->
      <!-- <ProjectReference Include="..\Saas-Shared-Lib\Saas-Shared-Lib.csproj" /> -->
   </ItemGroup>
 
